ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: "nginx"
  name: jenkins-ingress
spec:
  rules:
  - host: jenkins.myhomelab.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - jenkins.myhomelab.xyz
    secretName: jenkins-ingress-cert # < cert-manager will store the created certificate in this secret.
